# macos-local-voice-agents

./: CMakeLists.txt
config/: app_config.json
src/: CMakeLists.txt  main_desktop.cpp
src/app/: AppConfig.cpp  AppConfig.h
src/audio/: AudioFileWriter.cpp  AudioFileWriter.h
src/cli/: main_cli.cpp
src/core/: GenerationConfig.cpp  GenerationConfig.h  ModelBackend.h  ModelBackendDummy.cpp  ModelBackendOnnx.cpp  StableAudioEngine.cpp  StableAudioEngine.h
